# INE5631-INE5660-TCC

./: .gitignore  README.md  main.bcf-SAVE-ERROR  main.tex
beforetext/: folhadeaprovacao.tex
docs/: references.md
docs/complementares/modelos/: antigravity.md  claude.md  gemini.md  gpt.md
docs/complementares/resumos/: template_resumo_artigo.tex  wang_2025_integrating.tex
docs/latex/: main.tex  pdflatex_out.txt
docs/latex/aftertext/: references.bib
docs/latex/beforetext/: agradecimentos.tex  beforetext.tex  resumos.tex  siglas.tex
docs/latex/chapters/: chapter_1.tex  chapter_2.tex  chapter_3.tex  intro.tex
docs/latex/setup/: ufscthesisx.cls
docs/modelos/: claude.md  gemini.md  references.md
docs/references/: catalogo_artigos.md
docs/references/artigos_md/: wang_2025_integrating.md
docs/references/artigos_pdf/: .gitkeep
docs/references/fichamentos_md/: moura2024deteccao.md  notaro2021survey.md
docs/resumos/: moura2024deteccao.tex  survey_llm_aiops.tex
src/: .env.example  README.md  pyproject.toml
src/app/: main.py
src/app/api/: webhooks.py
src/app/core/: config.py
src/app/models/: alert.py
src/app/services/: llm_gateway.py  prometheus_client.py
